# django-asyncapi

./: .buildinfo  README.md  api.html  config.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  tutorial.html
.doctrees/: api.doctree  config.doctree  environment.pickle  index.doctree  tutorial.doctree
.doctrees/asyncapi_api/v3/: simple_spec.doctree  tag.doctree  topic_v3.doctree
.doctrees/tutorial/: chapter_1.doctree  chapter_2.doctree  chapter_3.doctree
.github/workflows/: documentation.yml
_sources/: api.md.txt  config.md.txt  index.md.txt
_sources/asyncapi_api/v3/: simple_spec.md.txt  tag.md.txt
_sources/tutorial/: chapter_1.md.txt  chapter_2.md.txt
asyncapi_api/v3/: simple_spec.html  tag.html  topic_v3.html
django_asyncapi/: import_settings.py  settings.py  urls.py  utils.py
django_asyncapi/static/js/: asyncapi_component_1.4.5.js  asyncapi_component_2.1.0.js
django_asyncapi/templates/: asyncapi.html
django_asyncapi/views/v3/: asyncapi.py
docs/: api.md  conf.py  tutorial.md
docs/_templates/sidebar/: versions.html
docs/asyncapi_api/: simple_spec.md
docs/asyncapi_api/v3/: topic_v3.md
docs/tutorial/: chapter_3.md
tutorial/: chapter_1.html  chapter_2.html  chapter_3.html
