[tool.poetry]
name = "django-asyncapi"
version = "0.1.0"
description = ""
authors = ["Sergei Konik <s.konik.dev@gmail.com>"]
readme = "README.md"
packages = [{include = "django_asyncapi"}]

[tool.poetry.dependencies]
python = "^3.10"
django = ">= 3.2.0"
asyncapi-container = "0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
