[tool.poetry]
name = "django-asyncapi"
version = "0.3.1"
description = ""
authors = ["Sergei Konik <s.konik.dev@gmail.com>"]
readme = "README.md"
packages = [{include = "django_asyncapi"}]

[tool.poetry.dependencies]
python = "^3.10"
django = ">= 3.2.0"
attrs = "^23.2.0"
asyncapi-container = "^0.4.1"


[tool.poetry.group.docs.dependencies]
sphinx = "^6.2.1"
myst-parser = "^3.0.1"
furo = "^2024.7.18"
sphinx-autobuild = "^2024.4.16"
autodoc-pydantic = "^2.2.0"
sphinx-inline-tabs = "^2023.4.21"
sphinx-copybutton = "^0.5.2"
attr-utils = {extras = ["sphinx"], version = "^1.1.0"}
docutils = "0.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
